<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>app</groupId>
    <artifactId>demo</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>demo</name>

    <properties>
        <!-- Build -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>25</maven.compiler.release>

        <!-- Main class -->
        <app.module>app</app.module>
        <app.mainClass>app.App</app.mainClass>

        <!-- Versions -->
        <javafx.version>25.0.1</javafx.version>
        <junit.version>5.12.2</junit.version>
        <gson.version>2.14.0</gson.version>
        <mysql.version>9.3.0</mysql.version>
        <atlantafx.version>2.1.0</atlantafx.version>
        <slf4j.version>2.0.17</slf4j.version>
        <logback.version>1.5.18</logback.version>

        <!-- Plugins -->
        <compiler.plugin.version>3.14.1</compiler.plugin.version>
        <surefire.plugin.version>3.5.4</surefire.plugin.version>
        <javafx.plugin.version>0.0.8</javafx.plugin.version>
        <exec.plugin.version>3.5.0</exec.plugin.version>
        <spotless.plugin.version>2.44.4</spotless.plugin.version>
        <checkstyle.plugin.version>3.6.0</checkstyle.plugin.version>

        <!-- Formatter -->
        <google.java.format.version>1.25.2</google.java.format.version>
    </properties>

    <dependencies>

        <!-- JavaFX -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <!-- UI -->
        <dependency>
            <groupId>io.github.mkpaz</groupId>
            <artifactId>atlantafx-base</artifactId>
            <version>${atlantafx.version}</version>
        </dependency>

        <!-- JSON -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
        </dependency>

        <!-- Database -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>${mysql.version}</version>
        </dependency>

        <!-- Logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>

            <!-- Java compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler.plugin.version}</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>

            <!-- JavaFX -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx.plugin.version}</version>

                <configuration>
                    <mainClass>${app.module}/${app.mainClass}</mainClass>
                    <launcher>app</launcher>

                    <jlinkZipName>app</jlinkZipName>
                    <jlinkImageName>app</jlinkImageName>

                    <stripDebug>true</stripDebug>
                    <compress>2</compress>

                    <noHeaderFiles>true</noHeaderFiles>
                    <noManPages>true</noManPages>

                    <options>
                        <option>--enable-native-access=ALL-UNNAMED</option>
                        <option>--enable-native-access=javafx.graphics</option>
                    </options>
                </configuration>
            </plugin>

            <!-- Run app -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>${exec.plugin.version}</version>
                <configuration>
                    <mainClass>${app.mainClass}</mainClass>
                </configuration>
            </plugin>

            <!-- Unit test -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.plugin.version}</version>
            </plugin>

            <!-- Checkstyle -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${checkstyle.plugin.version}</version>

                <configuration>
                    <configLocation>google_checks.xml</configLocation>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                </configuration>

                <executions>
                    <execution>
                        <id>checkstyle-validation</id>
                        <phase>validate</phase>

                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Formatter -->
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless.plugin.version}</version>

                <configuration>
                    <java>

                        <googleJavaFormat>
                            <version>${google.java.format.version}</version>
                            <style>GOOGLE</style>
                        </googleJavaFormat>

                        <removeUnusedImports/>

                    </java>
                </configuration>

                <executions>
                    <execution>
                        <id>spotless-check</id>
                        <phase>verify</phase>

                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <profiles>

        <profile>
            <id>app</id>

            <properties>
                <app.mainClass>app.App</app.mainClass>
            </properties>
        </profile>

        <profile>
            <id>server</id>

            <properties>
                <app.mainClass>app.ServerApp</app.mainClass>
            </properties>
        </profile>

        <profile>
            <id>demo</id>

            <properties>
                <app.mainClass>app.DemoRunner</app.mainClass>
            </properties>
        </profile>

    </profiles>

</project>